# OpenCVTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OpenCVTest.cpp  OpenCVTest.h  README.md  vcpkg.json
.github/workflows/: CI.yaml  CI.yml
