# CMakeList.txt : CMake project for OpenCVTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("OpenCVTest")

# Add source to this project's executable.
add_executable (OpenCVTest "OpenCVTest.cpp" "OpenCVTest.h")

# TODO: Add tests and install targets if needed.
